fix subtitles and add spacing to main-3

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,7 +4,14 @@
 
 /* ---------------------------------------------- Specials */
 
-h1,h2,h3,h4,h5 {
+h1,h2,h3,h4 {
+    font-family: "Robboto", sans-serif;
+    margin: 0;
+    color: #995a33;
+    font-weight: 400;
+}
+
+.sub {
     font-family: "Robboto", sans-serif;
     margin: 0;
     color: #995a33;
